--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,9 @@
-db.url=jdbc:postgresql://localhost:5432/postgres
-db.user=postgres
-db.password=451311qq
+//db.url=jdbc:postgresql://localhost:5432/postgres
+//db.user=postgres
+//db.password=451311qq
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=451311qq
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
