--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-//db.url=jdbc:postgresql://localhost:5432/postgres
-//db.user=postgres
-//db.password=451311qq
+#db.url=jdbc:postgresql://localhost:5432/postgres
+#db.user=postgres
+#db.password=451311qq
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
